--- a/index.html
+++ b/index.html
@@ -5,48 +5,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Employee Directory</title>
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous">
 
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 
 <body>
-    <div class="container">      
-      <div class="row">
-        <nav class="col-md-2">
-          <i class="address book">
-          <ul>
-            <li id="view">View</li>
-            <li id="add">Add</li>
-            <li id="verify">Verify</li>
-            <li id="update">Update</li>
-            <li id="delete">Delete</li>
-          </ul>
-        </nav>
-        <div class="col-md-2 content">
-          <form>
-            <div class="wrapper">      
-              <div class= "extra inputs">
-                  <input id="name" placeholder="Employee Name" />
-                  <input id="phone" placeholder="Phone Number" />
-                  <input id="office" placeholder="Office Phone" />
-              </div>
-              <button id=submitBtn>Submit</button>
-                
-            
-            </div>
-          </form>
-          <div id="employeeList"></div>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="nav col-md-3">
+        <ul>
+          <span class="icon-span"><i class="far fa-address-book"></i></span>
+          <li id="view"><span class="span">view</span></li>
+          <li id="add"><span class="span">add</span></li>
+          <li id="verify"><span class="span">verify</span></li>
+          <li id="update"><span class="span">update</span></li>
+          <li id="delete"><span class="span">delete</span></li>
+        </ul>
+      </nav>
+      <div class="col-md-9 content">
+        <form>
+          <div class="wrap">
+            <input id="name" placeholder="Name"><span class="extra-inputs"><input id="office" placeholder="Office"><input id="phone" placeholder="Phone"></span>
+            <button id="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </form>
+        <div class="col-md-9">
+          <div id="list"></div>
         </div>
       </div>
     </div>
-  
-  <script src="dom.js"></script>
-  <script src="employeeList.js"></script>
-  <script src="app.js"></script>
+    <script src="dom.js"></script>
+    <script src="app.js"></script>
+    <script src="employeeList.js"></script>
 </body>
 
 </html>
+
